--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			</div>
 		</nav>
 		<div id= "slogan" class="center">
-			<h1>Hi, I'm Soren</h1>
+			<h1>Hi, I'm Ricky</h1>
 			<h2>TSM FTW!</h2>
 		</div>
 	</body>
