change x to lowercase

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>WebDXD</title>
+		<title>WebDxD</title>
 		<link rel="stylesheet" href="style.css">
 		<link rel=“stylesheet” href=“normalize.css”>
 	</head>
