wo lai le , wo shi Johnny

--- a/network.html
+++ b/network.html
@@ -6,6 +6,7 @@
 		<link rel=“stylesheet” href=“normalize.css”>
 	</head>
 	<body>
+	<h1>wo lai le , wo shi Johnny</h1>
 		<img id="background" ="" src="img/background.jpg">
 		<nav class="container"> 
 			<div id="logo-wrapper" class="inline-block vertical-align">
